2002-12-01  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/libc-start.c (__libc_start_main): Do
	DL_SYSDEP_OSCHECK here.
	* sysdeps/unix/sysv/linux/init-first.c (init): Not here.
	* sysdeps/unix/sysv/linux/dl-osinfo.h: Include <fcntl.h>.

	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Bail if
	argument TCBSIZE <= TLS_INIT_TCB_SIZE, not just if it's zero.

	* sysdeps/generic/dl-tls.c (_dl_allocate_tls_init): Check l_tls_offset
	instead of l_type to decide whether to use TLS_DTV_UNALLOCATED.

	* include/link.h: Comment typo fix.

2002-12-01  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/bits/posix_opt.h (_POSIX_FSYNC): Set to 200112L.
	(_POSIX_SPAWN, _POSIX_MAPPED_FILES, _POSIX_MEMLOCK_RANGE,
	_POSIX_MEMORY_PROTECTION): Likewise.
	(_POSIX_POLL, _POSIX_SELECT): Removed.

2002-11-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define macros which
	require it to 200112L.  Remove _POSIX_POLL and _POSIX_SELECT.

2002-11-28  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/alpha/sysdep.S: Change defined(USE___THREAD) to
	USE___THREAD.
	* sysdeps/unix/sysv/linux/alpha/sysdep.h (inline_syscall*): Avoid
	"=v" constraints.

2002-11-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/vfork.S: Don't trash the CPU's
	branch prediction buffers by using unpaired call/ret.

2002-11-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (ASMFMT_2): Fix typo in
	first parameters constraint string.
	(ASMFMT_3): Likewise.  Patch by stefan.lauterbach@mincom.de.

2002-11-27  Isamu Hasegawa  <isamu@yamato.ibm.com>

	* posix/regcomp.c (parse_expression): Set the bit since the back
	reference is used in the regular expression.
	* posix/regex_internal.c (re_node_set_init_1): Make it clean in case
	of malloc failure.
	(re_node_set_init_copy): Likewise.
	* posix/regex_internal.h (state_array_t): New structure.
	(re_sub_match_last_t): Likewise.
	(re_sub_match_top_t): Likewise.