@@ -1,5 +1,7 @@
 2002-12-01  Roland McGrath  <roland@redhat.com>
 
+	* posix/bug-regex13.c: Include <string.h>.
+
 	* sysdeps/generic/libc-start.c (__libc_start_main): Do
 	DL_SYSDEP_OSCHECK here.
 	* sysdeps/unix/sysv/linux/init-first.c (init): Not here.
